# legacymind

./: .dockerignore  .gitattributes  .gitignore  README.md
benchmark/: README.md  RESULTS.md  modules.json  parse-coverage.json  parse-sweep.mjs  results.json  run-benchmark.mjs
benchmark/configs/: batchsum-diff-real.json  batchsum-prop-real.json  (+102 more)
cli/: README.md  package-lock.json  package.json  tsconfig.json
dashboard/: .env.example  .gitignore  README.md  middleware.ts  package-lock.json  package.json  stage-demo-data.mjs  trusted-key.pub.pem
docs/: backward-goto.md  comp3.md  composed-rounding.md  memory-layout.md  multivar-boundary.md  occurs-groups.md  occurs-indexed.md  occurs.md  record-protocol.md  redefines-edited.md  redefines.md  search-enumeration.md  search.md  through-rounding-bound.md
examples/: README.md  batchsum.cbl  dues.cbl  locker.cbl  mock-validation.json  payroll-diff-fixed.json  payroll-diff-real.json  payroll-diff.json  payroll-prop-defect.json  payroll-prop-real.json  payroll-prop.json  payroll-static-defect.json  payroll-static.json  payroll-sym-defect.json  payroll-sym-real.json  payroll-sym.json  payroll.cbl  rebate.cbl  settle.cbl  tabsum.cbl
harness/: README.md  build-legacy-image.ps1
ir/: README.md  schema.json
ir-core/: Cargo.toml  Dockerfile  README.md
ir-core/src/: lib.rs
ir-core/tests/: roundtrip.rs
ir-core/tests/fixtures/: DUES.ir.json  LOCKER.ir.json  MANIFEST.ir.json  PAYSLIP.ir.json  REBATE.ir.json  REORDER.ir.json
keys/: README.md  legacymind-dev-ed25519.seed
transpiler/: README.md
verifier/: README.md
(+107 files in other folders)
