[package]
name = "ir-core"
version = "0.1.0"
edition = "2021"
description = "LegacyMind IR core: the canonical typed owner and validator of the intermediate representation (ir/schema.json)."
license = "UNLICENSED"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
